objects/Order_Line_Item1__c.object
<CustomObject>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <formula>ROUND(IF(TEXT(Discount_Type__c)==&apos;%&apos;, ( List_Price__c* Quantity__c*(Discount__c/100)), Discount__c), 2)</formula>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Reason__c</fullName>
        <label>Discount Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Replacement_Item__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Defective/Lost CD</fullName>
                </value>
                <value>
                    <fullName>Paid User in TTO Needs Disk</fullName>
                </value>
                <value>
                    <fullName>Required for Troubleshooting</fullName>
                </value>
                <value>
                    <fullName>Customer Satisfaction</fullName>
                </value>
                <value>
                    <fullName>Order Problem (customer already paid)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Type__c</fullName>
        <label>Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>%</fullName>
                </value>
                <value>
                    <fullName>$</fullName>
                    <default>true</default>
                    <label>$</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extended_Amount__c</fullName>
        <description>This Field is being used only for Refund process. Value not to be stored</description>
        <formula>Refund_Qty__c  *  (  Unit_Refund_Amount__c  +  Freight_Refund_Amount__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Freight_Refund_Amount__c</fullName>
        <description>This Field is being used only for Refund process. Value not to be stored.</description>
        <label>Freight Refund Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order1__c</fullName>
        <label>Order</label>
        <referenceTo>Order1__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pricing_Credit_Refund_Amount__c</fullName>
        <description>This Field is being used only for Refund process. Value not to be stored.</description>
        <label>Pricing Credit Refund Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Refund_Qty__c</fullName>
        <description>This Field is being used only for Refund process. Value not to be stored</description>
        <label>Refund Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Refund_Reason__c</fullName>
        <description>This Field is being used only for Refund process. Value not to be stored</description>
        <label>Refund Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dissatisfied with Product</fullName>
                </value>
                <value>
                    <fullName>Duplicate Order</fullName>
                </value>
                <value>
                    <fullName>Never Ordered</fullName>
                </value>
                <value>
                    <fullName>No Longer Wants</fullName>
                </value>
                <value>
                    <fullName>Service Migration/Upgrade</fullName>
                </value>
                <value>
                    <fullName>Pricing Credit</fullName>
                </value>
                <value>
                    <fullName>Wrong Item Ordered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Replacement_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use this column to indicate if an item is being provided, as a courtesy, to a customer that has already purchased this item, but the item has been lost or is broken</inlineHelpText>
        <label>Replacement Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SKU_Id__c</fullName>
        <externalId>true</externalId>
        <label>SKU Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Price__c</fullName>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipping_Method__c</fullName>
        <label>Shipping Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Express</fullName>
                </value>
                <value>
                    <fullName>Expedited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_Price__c</fullName>
        <label>Shipping Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <formula>Sales_Price__c  /  Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Refund_Amount__c</fullName>
        <description>This Field is being used only for Refund process. Value not to be stored</description>
        <label>Unit Refund Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>